repaired spacing in assist-d-conf

--- a/frontend/src/styles/_riesgos.scss
+++ b/frontend/src/styles/_riesgos.scss
@@ -1,8 +1,15 @@
 
-
+/*******************************************************
+ *                                                     *
+ *******************************************************/
 .sidenav {
     max-width: unset;
-    width: 17rem;
+    min-width: 19rem;
+}
+
+.clr-row {
+    margin-right: 1.0rem;
+    margin-left: -1.6rem;
 }
 
 
@@ -14,6 +21,11 @@
 .clr-control-label {
     color: darkgray;
 }
+
+
+/*******************************************************
+ *                                                     *
+ *******************************************************/
 
 .table-small {
     td {
