--- a/frontend/src/styles/_ukis-layer-nav.scss
+++ b/frontend/src/styles/_ukis-layer-nav.scss
@@ -1,6 +1,10 @@
+.sidenav .nav-group {
+  margin-top: 0.4rem;
+}
+
+
 .clr-vertical-nav {
   .layers {
-    padding-bottom: 2px;
 
     .nav-divider {
       border-width: 1px 0 0 0;
